feat: initial release of zig.toolchain.cmake
Add a lightweight CMake toolchain file that enables cross-compilation
of C/C++ projects using Zig compiler, eliminating the need to install
platform-specific GCC toolchains.

Features:
- Support for multiple target platforms (Linux, Windows, macOS)
- Support for multiple architectures (x86_64, aarch64)
- Support for different ABIs (gnu, musl)
- Automatic generation of Zig compiler wrapper scripts
- Comprehensive test suite with 5 test fixtures across 8 target platforms
- Binary header verification to ensure correct cross-compilation

Components:
- zig.toolchain.cmake: Main toolchain file
- build.zig: Automated test framework
- tests/: Test fixtures (c_demo, cpp_demo, static_lib, shared_lib, windows_rc)
- Documentation in English and Chinese (README.md, README_zh.md)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-.zig-cache/
-zig-out/
-*.o
+/.vscode
+/.vs
+/.idea/
+/.cache
+/.discard/
+/.zig-cache
+/*.env
+/bin
+/out
+/build*/
+/cmake-build*/
+/zig-out
+/zig-build
