chore: Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-/.vscode
-/.vs
+/.vscode/
+/.vs/
 /.idea/
-/.cache
+/.cache/
 /.discard/
-/.zig-cache
+/.zig-cache/
 /*.env
-/bin
-/out
-/build*/
-/cmake-build*/
-/zig-out
-/zig-build
+[Bb]in/
+[Oo]ut/
+build/
+cmake-build-*/
+zig-out/
+zig-build/
