--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -46,6 +46,17 @@ jobs:
         with:
           version: master
 
+      - name: Cache Zig dependencies
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.cache/zig
+            ~/AppData/Local/zig
+            ~/Library/Caches/zig
+          key: ${{ runner.os }}-zig-deps-${{ hashFiles('.zigversion') }}
+          restore-keys: |
+            ${{ runner.os }}-zig-deps-
+
       - name: Set up CMake
         uses: jwlawson/actions-setup-cmake@v2
         with:
